--- a/Desktop/my-project/hackathon/index.html
+++ b/Desktop/my-project/hackathon/index.html
@@ -10,31 +10,32 @@
 </head>
 
 <body>
-	<div id="wrapper">
-
-		<div class="container">
-			<div class="title">
-			<h3>ARINKA</h3>
+	<div class="title">
+			<h1>ARINKA</h1>
 		</div>
-
+	<div id="wrapper">
+		
+		<div class="container">
 		<header>
 			<div class="logo">
-				<span class="fa fa-2x fa-pane"></span>
+				<span class="fa fa-2x fa-plane"></span>
 			<span>ARINKA</span>
 			</div>
 
 			<nav>
 				<ul>
-					<li>LOCATION</li>
-					<li>MOODS</li>
-					<li>BLOG</li>
+					<li><a href="#">LOCATION</a></li>
+					<li><a href="#">MOODS</a></li>
+					<li><a href="#">BLOG</a></li>
 				</ul>
+				<div class="clearfix"></div>
 			</nav>
 
 			<div>
-				<button class="linkBtn">SIGNIN / SIGNUP</button>
+				<button class="linkBtn"><a href="#">SIGNIN / SIGNUP</a></button>
 			</div>
 		</header>
+		<div class="clearfix"></div>
 
 		<center>
 			<div class="context">
@@ -58,6 +59,7 @@
 		</center>
 
 
+			<div class="clearfix"></div>
 			<div class="section">
 				<div class="overlay">
 					<div class="imageHolder">
@@ -90,7 +92,7 @@
 
 			<div class="section">
 				<div class="overlay">
-					<div class="imageHolder">
+					<div class="imageHolder" id="Car-Race">
 						<img src="images\Car-Race.jpg">
 					</div>
 				</div>
@@ -102,7 +104,7 @@
 					</div>
 				</div>
 			</div>
-
+			
 			<center><button class="btn">SEE MORE</button></center>
 
 			<div class="clearfiv"></div>
@@ -113,6 +115,7 @@
 			</section>
 	</div>
 
+	<div class="clearfix"></div>
 	<footer>
 		<div class="footer-text">
 			<ul>
