--- a/Desktop/my-project/hackathon/index.html
+++ b/Desktop/my-project/hackathon/index.html
@@ -1,129 +1,157 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title> FRONTSTACK RESPONSIVE DESIGN HACKATHON</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="css/media.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Catamaran" rel="stylesheet">
 </head>
 
 <body>
 	<div class="title">
-			<h1>ARINKA</h1>
-		</div>
+		<h1>ARINKA</h1>
+	</div>
 	<div id="wrapper">
-		
+
 		<div class="container">
-		<header>
-			<div class="logo">
-				<span class="fa fa-2x fa-plane"></span>
-			<span>ARINKA</span>
-			</div>
+			<header>
+				<div class="logo">
+					<span class="fa fa-2x fa-plane"></span>
+					<span>ARINKA</span>
+				</div> 
 
-			<nav>
-				<ul>
-					<li><a href="#">LOCATION</a></li>
-					<li><a href="#">MOODS</a></li>
-					<li><a href="#">BLOG</a></li>
-				</ul>
-				<div class="clearfix"></div>
-			</nav>
+				<nav>
+					<ul>
+						<li>
+							<a href="#">LOCATION</a>
+						</li>
+						<li>
+							<a href="#">MOODS</a>
+						</li>
+						<li>
+							<a href="#">BLOG</a>
+						</li>
 
-			<div>
-				<button class="linkBtn"><a href="#">SIGNIN / SIGNUP</a></button>
-			</div>
-		</header>
-		<div class="clearfix"></div>
+					</ul>
+				</nav>
 
-		<center>
-			<div class="context">
-				<h2>Discover the best places <br>to travel to in Nigeria</h2>
-				<p>What type of adventure are you looking for?</p>
-			</div>
+				<div>
+					<button class="linkBtn">
+						<a href="#">SIGNIN / SIGNUP</a>
+					</button>
+				</div>
+			</header>
+			<div class="clearfix"></div>
 
-			<div class="formWrapper">
-				<form>
-					<input type="" name="text" class="text-entry" required placeholder="e.g educational, outdoors, relaxed">
-				</form>
-			</div>
-		</center>
+			<center>
+				<div class="context">
+					<h2>Discover the best places
+						<br>to travel to in Nigeria</h2>
+					<p>What type of adventure are you looking for?</p>
+				</div>
+
+				<div class="formWrapper">
+					<form>
+						<input type="" name="text" class="text-entry" required placeholder="e.g educational, outdoors, relaxed">
+					</form>
+				</div>
+			</center>
 		</div>
 
 		<center>
 			<div class="content">
 				<h3>ABOUT ARINKA</h3>
-				<p>Arinka is a financial company,but actually a real idea someone had sometime in the past. In 1985 Aldus Corporate launched its first desktop publishing program Aldus PageMaker for Apple Macintosh computers, released in 1987 for PCs running Windows 1.0. Both contained the variant lorem ipsum most common today.</p>
+				<p>Arinka is a financial company,but actually a real idea someone had sometime in the past. In 1985 Aldus Corporate launched
+					its first desktop publishing program Aldus PageMaker for Apple Macintosh computers, released in 1987 for PCs running
+					Windows 1.0. Both contained the variant lorem ipsum most common today.</p>
 			</div>
 		</center>
 
 
-			<div class="clearfix"></div>
-			<div class="section">
-				<div class="overlay">
-					<div class="imageHolder">
-						<img src="images/Abuja.jpg">
-					</div>
-				</div>
-
-				<div class="imageCaption">
-					<div id="textRelaxed">
-						<h4>Bauchi Park</h4>
-						<p>Relaxed holyday for two</p>
-					</div>
+		<div class="clearfix"></div>
+		<div class="section">
+			<div class="overlay">
+				<div class="imageHolder">
+					<img src="images/Abuja.jpg">
 				</div>
 			</div>
 
-			<div class="section">
-				<div class="overlay">
-					<div class="imageHolder">
-						<img src="images\Jos.jpg">
-					</div>
+			<div class="imageCaption">
+				<div id="textRelaxed">
+					<h2>Bauchi Park</h2>
+					<p>Relaxed holyday for two</p>
 				</div>
+			</div>
+		</div>
 
-				<div class="imageCaption">
-					<div id="textJos">
-						<h4 >Jos, Plateau</h4>
-						<p>Experience Nigeria in the 60s</p>
-					</div>
+		<div class="section">
+
+			<div class="imageHolder">
+				<img src="images\Jos.jpg">
+			</div>
+
+			<div class="imageCaption">
+				<div id="textJos">
+					<h2>Jos, Plateau</h2>
+					<p>Experience Nigeria in the 60s</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="section">
+			<div class="overlay">
+				<div class="imageHolder" id="Car-Race">
+					<img src="images\car-race2.jpg">
 				</div>
 			</div>
 
-			<div class="section">
-				<div class="overlay">
-					<div class="imageHolder" id="Car-Race">
-						<img src="images\Car-Race.jpg">
-					</div>
-				</div>
-
-				<div class="imageCaption">
-					<div id="textAbuja">
-						<h4>Abuja Car Racing</h4>
-						<p>Get Your Adrenaline Pumping</p>
-					</div>
+			<div class="imageCaption">
+				<div id="textAbuja">
+					<h2>Abuja Car Racing</h2>
+					<p>Get Your Adrenaline Pumping</p>
 				</div>
 			</div>
-			
-			<center><button class="btn">SEE MORE</button></center>
+		</div>
 
-			<div class="clearfiv"></div>
+		<center>
+			<button class="seeMoreBtn">SEE MORE</button>
+		</center>
 
-			<section>
-				<div class="hangingOut"></div>
-				<div class="imageBox"></div>
-			</section>
+
+		<div class="hanginOutSection">
+			<div class="hangingOut">
+				<div>
+					<p>ON THE BLOG</p>
+
+					<h2>Hanging out in Borno</h2>
+				</div>
+
+			</div>
+			<div class="imageBox"></div>
+		</div>
+
+		<div class="clearfix"></div>
+
+		<footer>
+			<div class="footer-text">
+
+				<div class="terms">
+					<h3> Terms and Conditions </h3>
+				</div>
+
+				<div class="copyright">
+					<h3> Copyright Frontstack,2017 </h3>
+				</div>
+
+			</div>
+		</footer>
+
 	</div>
 
-	<div class="clearfix"></div>
-	<footer>
-		<div class="footer-text">
-			<ul>
-				<li id="text1">Terms and Conditions</li>
-				<li id="text2">Copyright Frontstack,2017</li>
-			</ul>	
-		</div>	
-	</footer>
-
 </body>
+
 </html>
